--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node": "^8.2"
   },
   "dependencies": {
-    "express": "^4.15.3"
+    "body-parser": "^1.18.1",
+    "express": "^4.15.4"
   }
 }
